cleaned up discussion section, added acknowledgements

--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -178,9 +178,6 @@ Coinhive developers estimate a monthly revenue of about 0.3 XMR (about \$101 USD
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
-
-
-
 \section{Mitigations}
 
 We discuss the ethics of cryptojacking in the next section, but in the case of cryptojacking without user consent, it is seems natural to us to presuppose users want to be protected. Protection might take a few forms, which we outline here.
@@ -206,34 +203,21 @@ It is worth noting that some browsers might actually take the exact opposite app
 \section{Discussion}
 \label{sec:ethics}
 
-In our opinion, users should be given the option to enable the miner code in their browser only with some benefit to their experience on the website. Recent polls support this notion, such as the one conducted by Bleeping Computer, which found that ``many users said they are OK with websites mining Monero in the background if they don`t see ads anymore''~\cite{bleepingcomputerminers}. Another example would be granting access to premium features of the website such as journal articles behind a paywall, or streaming in high-definition. The website could also allow the user to participate in mining rewards by allocating a large portion of their CPU resources to the activity of mining, which would benefit both parties. By notifying the user of the potentials of such activity, and allowing them to make a choice to participate, the website maintains trust in their relationship with the user while also benefiting from a new source of revenue. By foregoing proper communication of this new activity, which can have harmful effects, it could be conventional that a website will gain a new revenue stream for a short time only while sacrificing their reputation in the long term. Coinhive's recent response to the market's negative reaction by releasing AuthedMine, which enforces user consent before enabling any mining JavaScript code, justifies this rationale. However, before consensual browser mining could develop into a sustainable model, its security implications, ethics and user impact should be addressed.
+While cryptojacking might be relatively new, it fits the pattern of various other technologies deployed on the web that raise ethical questions. In thinking about it, we distinguish a few cases: (1) the use of cryptojacking on a breached website, (2) the use of cryptojacking by the website owner with an attempt at obtaining user consent, and (3) the use of cryptojacking by the website owner without obtaining user consent. We would argue that (1) is clearly unethical; invariant to one's views on the ethics of hacking, we cannot see a justification for a breach that profits the adversary without any external benefits to anyone else.
 
-Replacement of online advertisement with in-browser mining could be a new way to monetize website's traffic. As an example in both auction-based and keyword-based online advertisement, the advertiser pays the advertisement publisher to distribute the advertisement and the advertisement publisher pays a portion of the revenues to the website owner whom the advertisement was shown on her website~\cite{king2007internet}. However with in-browser mining as a replacement monetization strategy, the user is technically paying for their website visit on their electricity bill. This clearly indicates a policy vacuum in place for the new monetization method.
+The second case, cryptojacking after gaining user consent, is controversial primarily because it is unclear if users understand what they are consenting to, what they receive in return (some examples might include the elimination of ads, premium features, paywalled content, or higher definition video streams), and whether it is a fair exchange. To understand the zeitgeist, consider a recent poll conducted by Bleeping Computer that found: ``many users said they are OK with websites mining Monero in the background if they don't see ads anymore''~\cite{bleepingcomputerminers}. Coinhive released AuthedMine in recognition of the importance to many of user consent. ThePirateBay.org~\cite{bbcmintcrypto} ran cryptojacking scripts while users searched for torrent files without notice in their Privacy Policy, nor any visible warning on any part of the website that informed their users of this activity. This resulted in a backlash against the website, which responded with the following statement, ``Do you want ads or do you want to give away a few of your CPU cycles every time you visit the site?''~\cite{piratesbayblog}. While the admins admitted to their testing of browser mining, their notice came after it was discovered and they ultimately removed the code. In both auction-based and keyword-based online advertisement, the advertiser pays the advertisement publisher to distribute the advertisement and the advertisement publisher pays a portion of the revenues to the website owner whom the advertisement was shown on her website~\cite{king2007internet}. However with in-browser mining as a replacement monetization strategy, a more direct compensation is established with less intermediaries which could benefit users and sites alike. 
 
+The potential harm to users of cryptojacking is higher energy bills, along with accelerated device degradation, slower system performance, and a poor web experience~\cite{httparchiveminingimpact,gaurdianelectricity}. While consent may be obtained from the user, it is unclear if the user's mental model of how they are paying can be made clear to them. On the other hand, the privacy disclosures users make in the traditional advertising model are also intangible; it is doubtful users understand what they are consenting to when they, for example, consent through a banner~\cite{eucookie} to the use of tracking cookies; and many websites waste computational resources without consequence through buggy scripting and unnecessary libraries. In short, the ethics are not clear-cut and should be debated. 
 
-%TODO: this paragraph can be shortened. the point is the story of piratesbay and how they dealth with it
-Most browser mining code is executed without the consent, nor knowledge, of the users involved. As previously mentioned, the websites that have been found running JavaScript code for the purpose of mining usually employed Coinhive's API. One such website, for example, ThePirateBay.org~\cite{bbcmintcrypto}, which ran the JavaScript code when users searched for torrent files. Perhaps unsurprisingly, there was no notice in their Privacy Policy nor visible warning on any part of the website that informed their users of this activity. This resulted in a backlash against the website, which responded with the following statement, ``Do you want ads or do you want to give away a few of your CPU cycles every time you visit the site?''~\cite{piratesbayblog}. While the admins admitted to their testing of browser mining, their notice came after it was discovered and they ultimately removed the code. This could be contrasted to the banners users are presented with upon the first visit to a website that warns them of the website's policy on cookies, which is enforced today through EU laws~\cite{eucookie}. It is now widely known that these cookies can be used to track users across the internet, so cookie banners can act as a reminder and allow the user to make better informed decisions regarding their browsing habits. Without any type of disclaimer for users, websites have been commandeering their users' CPU resources for their business and personal gain. This results in higher energy bills for the user, along with accelerated device degradation, slower system performance, and poor web experience~\cite{httparchiveminingimpact,gaurdianelectricity}.
+One webservice prone to cryptojacking is video streaming---the longer a user is engaged on a website, the more income can be earned through browser mining. Showtime.com~\cite{registershowtime} and UFC.com~\cite{registerufcmonero} are two popular streaming sites that were asserted by researchers to have deployed Coinhive. Showtime has declined to comment on how or why Coinhive was implemented on their website. Speculation has been raised that it was injected via a third-party analytic tool, New Relic, due to Coinhive being found inside the New Relic code block within showtime's website source code. However a New Relic representative denied these claims in a statement to The Register, ``It appears [Coinhive scripts] were added to the website by [Showtime's] developers.''~\cite{registershowtime}. In a statement released by the UFC, they denied the presence of the code stating, ``[they] did not find any reference to the mentioned Coinhive JavaScript [code]''\footnote{\url{https://twitter.com/bad_packets/status/928044219222048769}}.
 
-
-%TODO: the next two paraphraphs also has been talked about before. can combine both together.
-A second example of a popular website deploying Coinhive's API was Showtime.com, which is a popular cable channel that also streams their TV shows online. Showtime has declined to comment on how or why Coinhive was implemented on their website. Speculation has been raised that it was injected via a third-party analytic tool, New Relic, due to Coinhive being found inside the New Relic code block within showtime's website source code. However a New Relic representative denied these claims in a statement to The Register, "It appears they [Coinhive scripts] were added to the website by its [Showtime's] developers."~\cite{registershowtime}. 
-It was then hardly surprising when UFC.com was accused of using this very same code on the night of streaming one of their most popular events~\cite{registerufcmonero}. In a statement released by the UFC, they denied the presence of the code stating, ``[they] did not find any reference to the mentioned Coinhive JavaScript [code]``\footnote{\url{https://twitter.com/bad_packets/status/928044219222048769}}.
-
-
-For decades computer ethicists' primary job has been to identify these policy vacuums and to fill in the conceptual and policy void. As the concept of website traffic revenue begins to change, the values associated with the old concepts will have to be reexamined. Moor, in "What is Computer Ethics?"~\cite{moor1985computer} introduces the concept of an \textit{invisible factor} for invisible computer operations in society. Based on his definitions, we would classify cryptojacking that does not gain user consent as \textit{invisible abuse}: the intentional use of the invisible operations of a computer to engage in unethical conduct. Here the cryptojacker is earning money from unaware users that are being charged on their electricity bill. As discussed before, we already have court cases against such activities~\cite{njcourtbitcoinjsminer} and regulations for activities such as online user tracking~\cite{eucookie}, which indicates the need to start discussions and regulation on in-browser mining as well. 
-
-
-The recent trend of streaming websites deploying Coinhive's API could be due to the high costs of providing streaming services. While ads can be used to offset some of those costs, it would be of interest to some to at least experiment with the idea of recruiting their users to mine Monero for profit. This same regard is true for hackers looking to maximize their cryptojacking profits. The longer a user is engaged on a website, such as video streaming service, the more income can be earned through browser mining.
-
-Given the recent interest some websites have shown in regard to browser mining, there is also potential for this new form of revenue generation to compete with advertisements. As seen in section~\ref{profitabilitexperiment}, an immediate impact could be to reduce how many ads a user sees on a given website. Moving forward websites with long user sessions such as streaming services could one day even replace ads. This is because malwares associated with advertisements (drive-by download) are still a growing concern, and the public's dislike of advertisements will likely persist and not wane. Also, as cryptocurrencies continue to grow in market capitalization and use cases, their inevitable mainstream use will push the profitability of mining egalitarian proof-of-work cryptocurrencies, such as Monero, well into the future. 
-
-%The lack of regulation in cryptocurrency space allows for a grey market to grow. This is felt more when it affects non-tech-savvy users. 
-
+The third case is the use of cryptojacking without user consent. Moor, in "What is Computer Ethics?"~\cite{moor1985computer} introduces the concept of an \textit{invisible factor} for invisible computer operations in society. Based on his definitions, we would classify cryptojacking that does not gain user consent as \textit{invisible abuse}: the intentional use of the invisible operations of a computer to engage in unethical conduct. Here the cryptojacker is earning money from unaware users that are being charged on their electricity bill. As discussed before, we already have court cases against such activities~\cite{njcourtbitcoinjsminer} and regulations for activities such as online user tracking~\cite{eucookie}, which indicates the need to start discussions and regulation on in-browser mining as well. 
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
+\section{Acknowledgements}
 
-
+J. Clark thanks NSERC and FRQNT for partial funding of this research. 
 
 
 
