--- a/Paper/sections/abstract.tex
+++ b/Paper/sections/abstract.tex
@@ -7,5 +7,5 @@ In this paper, we examine the recent trend towards in-browser mining of cryptocu
 \end{abstract}
 
 \begin{IEEEkeywords}
-Cryptocurrency; Monero; Coinhive; Mining; Bitcoin; Blockchain; Cryptojacking
+Cryptocurrency; Monero; Coinhive; Mining; Bitcoin; Blockchain; Cryptojacking; Ethics
 \end{IEEEkeywords}
